--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/072e5df971.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="shortcut icon" href="./assets/img/4geeks.ico" />
   </head>
 
   <body>
@@ -55,7 +56,7 @@
       <li>
         <label>Role</label>
         <select class="picker" for="role">
-          <option value="">null</option>
+          <option value="">Select</option>
           <option value="Web Developer">Web Developer</option>
           <option value="Floor Planner">Floor Planner</option>
           <option value="Technical Writter">Technical Writter</option>
@@ -64,7 +65,7 @@
       <li>
         <label>City</label>
         <select class="picker" for="city">
-          <option value="">null</option>
+          <option value="">Select</option>
           <option value="Miami">Miami</option>
           <option value="Munich">Munich</option>
           <option value="Caracas">Caracas</option>
@@ -74,7 +75,7 @@
       <li>
         <label>Country</label>
         <select class="picker" for="country">
-          <option value="">null</option>
+          <option value="">Select</option>
           <option value="USA">USA</option>
           <option value="Germany">Germany</option>
           <option value="Canada">Canada</option>
